tests/dataset/tpc-ds/compiler/c/q46.error
/tmp/q46.c: In function ‘test_TPCDS_Q46_simplified’:
/tmp/q46.c:311:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  311 |   if (test_TPCDS_Q46_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/q46.c:315:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  315 |       if (test_TPCDS_Q46_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/q46.c: In function ‘main’:
/tmp/q46.c:358:7: error: conflicting types for ‘cities’; have ‘int’
  358 |   int cities = cities;
      |       ^~~~~~
/tmp/q46.c:356:15: note: previous definition of ‘cities’ with type ‘list_string’
  356 |   list_string cities = list_string_create(1);
      |               ^~~~~~
/tmp/q46.c:361:7: warning: implicit declaration of function ‘base_item_list_t_create’ [-Wimplicit-function-declaration]
  361 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/q46.c:361:48: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  361 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |                                                ^
      |                                                ->
/tmp/q46.c:361:71: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  361 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |                                                                       ^
      |                                                                       ->
/tmp/q46.c:375:36: warning: comparison between pointer and integer
  375 |         if (!(current_addr.ca_city != dnrec.bought_city)) {
      |                                    ^~
/tmp/q46.c:401:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  401 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/q46.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q46.c:405:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  405 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/q46.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q46.c:409:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  409 |     _json_string(it.ca_city);
      |                  ~~^~~~~~~~
/tmp/q46.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q46.c:429:38: error: incompatible types when assigning to type ‘list_int’ from type ‘base_item_list_t’
  429 |   test_TPCDS_Q46_simplified_result = result;
      |                                      ^~~~~~
